--- a/Web/styles.css
+++ b/Web/styles.css
@@ -9,3 +9,39 @@
     max-width: 100px;
     margin-right: 20px;
 }
+
+.In{
+    body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: D03E7E;
+    }
+    form{
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+        padding: 20px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        background-color: D0AEEF;
+    }
+    input{
+        margin-bottom: 10px;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid D0AEEF;
+    }
+    bottom{
+        padding: 10px;
+        border-radius: 5px;
+        border: none;
+        background-color: D0AEEF;
+        color: D03E7E;
+        cursor: pointer;
+    }
+    butto:hover{
+        background-color: #0056b3;
+    }
+}
