--- a/Web/GameHomepage.css
+++ b/Web/GameHomepage.css
@@ -9,7 +9,7 @@
     margin-bottom: 50px;
 }
 
-.LeaderBoard{
+.columna_derecha{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -25,3 +25,23 @@
     height: 100px;
     background-color: #000000;
   }
+
+  .Controls{
+    width: 300px;
+    height: 200px;
+    border: 1px solid #000000;
+    padding: 10px;
+    box-sizing: border-box;
+    background-color: #ffffff;
+    color: #000000;
+}
+
+.Leaderboard{
+    width: 300px;
+    height: 200px;
+    border: 1px solid #000000;
+    padding: 10px;
+    box-sizing: border-box;
+    background-color: #ffffff;
+    color: #000000;
+}
