--- a/Web/GameHomepage.css
+++ b/Web/GameHomepage.css
@@ -1,3 +1,9 @@
+* {
+    margin: 7px;
+    padding: 2px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 20px;
+  }
 .Partners{
     display: flex;
     flex-direction: column;
@@ -45,3 +51,75 @@
     background-color: #ffffff;
     color: #000000;
 }
+
+.header {
+    background-color: white;
+    display: flex;
+    justify-content: space-between; /* Espacio entre los elementos del header */
+    align-items: center;
+    height: 20px;
+    padding: 2px 2%;
+  }
+  
+  .header .logo {
+    cursor: pointer;
+  }
+  
+  .header .logo img {
+    height: 100px;
+    padding-top: 45px;
+    width: auto;
+    transition: all 0.3s;
+  }
+  
+  .header .nav-links {
+    list-style: none;
+  }
+  
+  .header .nav-links li {
+    display: inline-block;
+    padding: 0 2px 0;    
+  }
+  
+  .header .nav-links li:nth-child(1) {
+    padding: 0 20px 0 0;
+  }
+  
+  .header .nav-links li:hover {
+    transform: scale(1.1);
+  }
+  
+  .header .nav-links a {
+    font-size: 700;
+    color: black;
+    text-decoration: none;    
+  }
+  
+  .header .nav-links a:hover {
+    text-decoration: underline;
+  }
+  
+  .user-login {
+    margin-right: 5%; /* Espacio entre el botón y el borde derecho del header */
+  }
+  
+  .btn-search {
+    display: inline-block; /* Para que los iconos se muestren en la misma línea */
+  }
+  
+  .btn-search img {
+    width: 30px; /* Ajusta el tamaño de los iconos según sea necesario */
+    height: auto; /* Mantiene la proporción de la imagen */
+    margin-left: -10px; /* Espacio entre los iconos */
+    cursor: pointer; /* Cambia el cursor al pasar por encima del icono */
+  }
+  .btn-search img:hover {
+    transform: scale(1.2); /* Aumenta el tamaño del icono al pasar el ratón sobre él */
+  }
+  .container {
+    width: 90%;
+    margin: 40px auto;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+  }
