--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -349,7 +349,13 @@ body {
 }
 
 .register-box .button-group button:hover {
-  background-color: grey;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(198, 31, 31);
+  width: auto;
+  padding: 10px 20px;
+  margin-top: 20px;
 }
 .container {
   width: 800px;
